backend update
API DDoS protection (rate limiting)
Human-in-the-loop for critical alerts
Report generation guardrails
Canary rollout support
Hybrid OTP/SMS logic (online primary, GSM fallback)